fixed text-align benefits, font mixin

--- a/css/styles.css
+++ b/css/styles.css
@@ -409,13 +409,13 @@ h4 {
   padding: 0 0 30px 0;
 }
 .popup__main-header {
-  background: linear-gradient(to right, #F0145A, 20%, #EF8080);
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
   font-weight: 700;
   font-size: 30px;
   line-height: 37px;
-  color: 0;
+  color: #24A3FF;
+  background: linear-gradient(to right, #F0145A, 20%, #EF8080);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
   margin-bottom: 30px;
 }
 .popup__secondary-header {
@@ -458,7 +458,7 @@ h4 {
     font-weight: 700;
     font-size: 38px;
     line-height: 46px;
-    color: 0;
+    color: #24A3FF;
   }
 }
 .main-button {
@@ -564,13 +564,13 @@ h4 {
   padding: 30px;
 }
 .benefits__header {
-  background: linear-gradient(to right, #F0145A, 20%, #EF8080);
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
   font-weight: 700;
   font-size: 30px;
   line-height: 37px;
-  color: 0;
+  color: #24A3FF;
+  background: linear-gradient(to right, #F0145A, 20%, #EF8080);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
   margin-bottom: 0;
 }
 .benefits__item {
@@ -640,6 +640,7 @@ h4 {
     padding-top: 0;
     padding-bottom: 0;
     text-align: right;
+    padding: 0;
   }
   .benefits__header {
     margin-left: 0;
@@ -1066,7 +1067,7 @@ h4 {
   font-weight: 700;
   font-size: 30px;
   line-height: 36px;
-  color: 0;
+  color: #24A3FF;
   background: linear-gradient(to right, #F0145A, 20%, #EF8080);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
