--- a/sass/blocks/header/_benefits.scss
+++ b/sass/blocks/header/_benefits.scss
@@ -19,8 +19,8 @@ $screen: ("tablet": 768px,
     }
 
     &__header {
+        @include font (700, 30px, 37px);
         @include gradient-text ();
-        @include font (700, 30px, 37px, 0);
         margin-bottom: 0;
     }
 
@@ -94,6 +94,7 @@ $screen: ("tablet": 768px,
             padding-top: 0;
             padding-bottom: 0;
             text-align: right;
+            padding: 0;
         }
 
         &__header {
